[metadata]
name = cochlea-tl-model-dan-1d
version = 0.0.1
author = Example Author
author_email = author@example.com
description = Cochlear model: Verhulst et al 2018
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[build_ext]
inplace=1